--- a/src/main/resources/templates/addUser.html
+++ b/src/main/resources/templates/addUser.html
@@ -14,7 +14,7 @@
 		<input type="text" name="name" placeholder="名前" />
 		<input type="text" name="email" placeholder="メールアドレス" />
 		<input type="text" name="password" placeholder="パスワード" />
-		<input type="text" name="password_confirm" placeholder="パスワード確認" />
+		<input type="text" name="password_confirm" placeholder="パスワード（確認）" />
 		<button>新規作成</button>
 	</form>
 
