ブログ記事の編集画面の表示・編集処理の実装

--- a/src/main/resources/templates/blogTable.html
+++ b/src/main/resources/templates/blogTable.html
@@ -20,7 +20,7 @@
 	<tr class="">
 		<th class="">内容</th>
 		<td class="">
-			<input type="text" name="content" class="" />
+			<textarea name="content" class=""></textarea>
 		</td>
 	</tr>
 
